--- a/static/html/default/templates/inventario/cambio_de_grupo.html
+++ b/static/html/default/templates/inventario/cambio_de_grupo.html
@@ -40,7 +40,7 @@
                     $('#procesar').removeAttr("disabled");
                 }
                 else {
-                    var uri = '/nymsa/inventario/s_cambio_grupo';
+                    var uri = '/{systemModuleName}/inventario/s_cambio_grupo';
                     var data = {
                         grupoActual: _grupoActual,
                         nuevoGrupo: _nuevoGrupo,
