--- a/static/html/default/templates/inventario/cambio_de_linea.html
+++ b/static/html/default/templates/inventario/cambio_de_linea.html
@@ -40,7 +40,7 @@
                     $('#procesar').removeAttr("disabled");
                 }
                 else {
-                    var uri = '/nymsa/inventario/s_cambio_linea';
+                    var uri = '/{systemModuleName}/inventario/s_cambio_linea';
                     var data = {
                         lineaActual: _lineaActual,
                         nuevaLinea: _nuevaLinea,
