--- a/static/html/default/templates/inventario/menu/segmentacion.html
+++ b/static/html/default/templates/inventario/menu/segmentacion.html
@@ -14,11 +14,15 @@
 </nav>
 
 <div id="scontent" class="span10" style="float:left; margin-left: 50px;">
-	<h3>Segmentación de productos</h3>
-	<p>
-		La segmentación de productos le permite clasificar sus productos. Seleccione una de las categorías a la izquierda
-		para editar.
-	</p>
+	<div class="panel span10" data-role="panel">
+	<div class="panel-header">
+		Segmentación de productos
+	</div>
+	<div class="panel-content">
+		<p>
+			Permite agrupar sus productos por medio de las diferentes categorías disponibles. De esta forma puede saber fácilmente que tipos de productos son los que más se venden y atraen más la atención de sus clientes. 
+		</p>
+	</div>
 </div>
 <div style="clear: both;"></div>
 <script type="text/javascript">
