--- a/static/html/default/templates/inventario/principal.html
+++ b/static/html/default/templates/inventario/principal.html
@@ -1,1 +1,46 @@
-<h3>Módulo de control de inventarios</h3>
+<style type="text/css">
+            body{
+                background: url(../static/img/banner.png) no-repeat;
+                background-position: bottom right;
+            }
+</style>
+<div class="panel span10" data-role="panel">
+	<div class="panel-header">
+		Módulo de control de inventarios	
+	</div>
+	<div class="panel-content">
+		<p>
+			Los inventarios son bienes tangibles que se tienen para la venta en el curso ordinario del negocio o para ser consumidos en la producción de bienes o servicios para su posterior comercialización
+		</p>
+	</div>
+</div>
+<p>
+	<br/>
+</p>
+<div class="panel span10" data-role="panel">
+	<div class="panel-header bg-lightBlue fg-white">
+		Información	
+	</div>
+	<div class="panel-content">
+		<p>
+			Funciones disponibles:
+			<ul>
+				<li>
+					Control de proveedores
+				</li>
+				<li>
+					Creación de catálogos de productos
+				</li>
+				<li>
+					Segmentación de productos
+				</li>
+				<li>
+					Gestión de bodega
+				</li>
+				<li>
+					Control de existencias
+				</li>
+			</ul>
+		</p>
+	</div>
+</div>
