--- a/static/html/default/templates/inventario/bodegas.html
+++ b/static/html/default/templates/inventario/bodegas.html
@@ -33,6 +33,8 @@
         encoding: 'UTF-8', // Sigma.$encoding(), 
         dataset: dsOption,
         columns: colsOption,
+        allowCustomSkin: true,
+        skin: 'mac',
         clickStartEdit: true,
         defaultRecord: {'id': "00", 'nombre': ""},
         pageSize: 10,
@@ -128,7 +130,7 @@
         <h3>Administración de bodegas</h3>
         <hr/>
         <h2>Nueva bodega</h2>
-        <form action="/{systemModuleName}/inventario/guardar_bodega" method="post">
+        <form action="/{systemModuleName}/inventario/guardar_bodega" method="post" style="float: left;">
             <div style="border:solid 1px #D3D3D3; margin-right:20px;padding:20px;display:table;">
                 <div style="margin-left:20px;">
                     <div style="text-align:right;padding-right:70px;">
@@ -141,7 +143,7 @@
                         <input type="text" style="width:300px;" name="id" id="id_" value="0" />
                     </div>
                     <br/>
-                    Nombre:
+                    <span class="fg-red">*</span> Nombre:
                     <div class="input-control text"  id="n_bodega"> 
                         <input type="text" style="width:300px;" name="nombre" id="nombre" required/>
                     </div> 
@@ -162,7 +164,7 @@
                         </select>
                     </div>
                     <br/>
-                    Descripci&oacute;n: 
+                    <span class="fg-red">*</span> Descripci&oacute;n: 
                     <div class="input-control textarea">
                         <textarea style="width:300px;" name="descripcion" id="descripcion" required></textarea>
                     </div>
@@ -175,12 +177,15 @@
                 <div style="clear: both;"></div>
             </div>
         </form>
-        <h2>Bodegas</h2>
-        <hr/>
-        <div id="bigbox" style="margin:15px;display:!none;margin:0 auto;left:0px;right:0px;">
-            <div id="gridbox" style="border:0px solid #cccccc;background-color:#f3f3f3;padding:5px;height:200px;width:700px;margin:0 auto;left:0px;right:0px;" >
+        <div style="margin-left: 30px; float: left;">
+            <h2>Mis bodegas</h2>
+            <hr/>
+            <div id="bigbox" style="margin:15px;display:!none;margin:0 auto;left:0px;right:0px;">
+                <div id="gridbox" style="border:0px solid #cccccc;background-color:#f3f3f3;padding:5px;height:200px;width:700px;margin:0 auto;left:0px;right:0px;" >
 
+                </div>
             </div>
         </div>
+        <div style="clear: both;"></div>
     </div>
 </div>
