--- a/static/html/default/templates/inventario/suelas.html
+++ b/static/html/default/templates/inventario/suelas.html
@@ -21,7 +21,7 @@
     var gridOption = {
         id: grid_demo_id,
         loadURL: '/{systemModuleName}/grid_tables/suela_grid_1',
-        saveURL: '/{systemModuleName}/inventario/actualizar?tblname=tacon',
+        saveURL: '/{systemModuleName}/inventario/actualizar?tblname=suela',
         width: "600", //"100%", // 700,
         height: "260", //"100%", // 330,
         container: 'gridbox',
@@ -44,9 +44,15 @@
 </script>
 
 <div id="page-container">
-    <div id="content">
+    <div id="content" class="span8">
         <form action="/{systemModuleName}/inventario/guardar_suela" method="post">
-            <input type="checkbox" name="rellenar"/> Reutilizar Id's
+            <div class="input-control checkbox">
+                <label>
+                    <input type="checkbox" name="rellenar"  />
+                    <span class="check"></span>
+                    Reutilizar ID
+                </label>
+            </div>
             <br/>
             <br/>
             <h3>Nueva suela:</h3> 
@@ -56,6 +62,8 @@
             <button type="submit" class="big"><i class="icon-save"></i>Agregar</button>
         </form>
     </div>
+    <br />
+    <br />
     <div id="bigbox" style="margin:15px;display:!none;">
         <div id="gridbox" style="border:0px solid #cccccc;background-color:#f3f3f3;padding:5px;height:200px;width:700px;" >
 
