--- a/static/html/default/templates/inventario/tacones.html
+++ b/static/html/default/templates/inventario/tacones.html
@@ -44,9 +44,15 @@
 </script>
 
 <div id="page-container">
-    <div id="content">
+    <div id="content" class="span8">
         <form action="/{systemModuleName}/inventario/guardar_tacon" method="post">
-            <input type="checkbox" name="rellenar"/> Reutilizar Id's
+            <div class="input-control checkbox">
+                <label>
+                    <input type="checkbox" name="rellenar"  />
+                    <span class="check"></span>
+                    Reutilizar ID
+                </label>
+            </div>
             <br/>
             <br/>
             <h3>Nuevo tacon:</h3> 
@@ -56,6 +62,8 @@
             <button type="submit" class="big"><i class="icon-save"></i>Agregar</button>
         </form>
     </div>
+    <br/>
+    <br/>
     <div id="bigbox" style="margin:15px;display:!none;">
         <div id="gridbox" style="border:0px solid #cccccc;background-color:#f3f3f3;padding:5px;height:200px;width:700px;" >
 
